@@ -1,5 +1,10 @@
 
 6.41  2016-01-20
+  - Added support for validation filters.
+  - Added filters attribute to Mojolicious::Validator.
+  - Added add_filter method to Mojolicious::Validator.
+  - Added filter arguments to optional and required methods in
+    Mojolicious::Validator::Validation.
   - Fixed MOJO_WEBSOCKET_DEBUG environment variable. (jberger)
 
 6.40  2016-01-13
